# speedtest

./: Cargo.toml  Readme.md  deploy.sh
src/: airtable.rs  client.rs  default.rs  defaults.rs  lib.rs  main.rs  speedtest.rs  utils.rs
