[package]
name = "rustyspeedtest"
license = "MIT"
edition = "2021"
readme = "Readme.md"

version = "0.1.1"
description = "Speed Test your Internet"
repository = "https://github.com/Enforcer007/rustyspeedtest.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = { version = "*" }
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["blocking", "json"] }
openssl = { version = "0.10.40", features = ["vendored"] }
